--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -84,3 +84,9 @@ div.dt-buttons {
 .bootstrap-select .dropdown-menu .show {
     max-height: 200px;
 }
+
+iframe.video {
+    max-width: 560px;
+    width: 100%;
+    height: 315px;
+}
