Fix reports count in the users overview and add totals

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -60,6 +60,11 @@ div.dt-buttons {
     cursor: pointer;
 }
 
+.totals-row {
+    border-top: 2px solid #000;
+    font-weight: bold;
+}
+
 .dashboard-active {
     background: rgba($dark, .2);
 }
